# esp32_obd_blue

./: README.md  freerots基础学习.md
gatt_client/: sdkconfig  sdkconfig.old
gatt_client/main/: gattc_demo.c
gatt_server/: sdkconfig
gatt_server/components/ebyte_driver/: ebyte.c
gatt_server/main/: CMakeLists.txt  ebyte_kfifo.h  gatts.h  gatts_demo.c  test.c
main/: CMakeLists.txt  OBD_detect.c  OBD_detect.h  OBD_simulator.c  OBD_simulator.h  func.c  func.h  hello_world_main.c
subg_radio_rev/main/: hello_world_main.c
subg_radio_send/: sdkconfig  sdkconfig.old
subg_radio_send/components/OBD_driver/: CMakeLists.txt  obd_detect.c
subg_radio_send/components/ebyte_driver/: CMakeLists.txt  ebyte.c  ebyte.h
subg_radio_send/components/ebyte_driver/OBD/: OBD_detect.c  gatts_demo.c
subg_radio_send/components/ebyte_driver/OBD/include/: gatts.h
subg_radio_send/components/ebyte_driver/ebyte/: ebyte_e220x.c
subg_radio_send/main/: CMakeLists.txt  OBD.c  OBD.h  app_gatts.c  app_main.c  app_obd2.c  app_subg.c  func.c  func.h  gatts.h  gatts_demo.c  test.c
subg_radio_send/main/include/: app.h  gatts.h  obd2.h
subg_send/: README.md  sdkconfig.old
subg_send/components/OBD_driver/: CMakeLists.txt  obd_detect.c
subg_send/components/QMA_driver/: CMakeLists.txt  QMA.c  qam.c
subg_send/components/cmt2300/: CMakeLists.txt  component.mk  rfm300_driver.c
subg_send/main/: CMakeLists.txt  app_cmt2300.c  app_gatts.c  app_main.c  app_obd2.c  app_qam.c  app_subg.c  self_test.c
subg_send/main/include/: app.h  app_qam.h  gatts.h  obd2.h  self_test.h
(+11 files in other folders)
