idf_component_register(
                    SRCS    app_obd2.c 
                            app_main.c 
                            app_gatts.c
                            app_subg.c
                            app_qam.c
                            self_test.c
                    INCLUDE_DIRS "include"
)
